@@ -1,6 +1,7 @@
 
 Drupal 7.40, xxxx-xx-xx (development version)
 -----------------------
+- Fixed non-functional "Files displayed by default" setting on file fields.
 - The "worker callback" provided in hook_cron_queue_info() and the "finished"
   callback specified during batch processing can now be any PHP callable
   instead of just functions.
